--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ More details can be found [on the developers website of the KvK](https://develop
 
 ## Installation
 
-The package has been submitted to CRAN for review. Once it's accepted and the CRAN status badge above shows "CRAN: OK", you can install the stable version from CRAN with:
+The package has been submitted to CRAN for review. Once it's accepted and the CRAN status badge shows "CRAN: OK", you can install the stable version from CRAN with:
 
 ``` r
 install.packages("kvkapiR")
@@ -63,8 +63,8 @@ To use the KvK API, you need an API key. You can apply for one at the [KvK Devel
 # Set API key for current session
 kvk_set_api_key("your_api_key_here")
 
-# Or store permanently in .Renviron
-kvk_store_api_key("your_api_key_here")
+# Or add to .Renviron file manually:
+# KVK_API_KEY=your_api_key_here
 ```
 
 ### Test Environment
@@ -119,24 +119,25 @@ names <- kvk_get_naamgeving("01036576")
 
 ## Usage Tracking and Cost Management
 
-The package automatically tracks API usage and costs:
+The package includes automatic session-based usage tracking:
 
 ```{r, eval = FALSE}
-# View usage report
+# View current session usage
 kvk_usage_report()
 
-# Set cost alerts
-kvk_usage_alert(max_cost = 25, period = "month")
+# Set session alerts
+kvk_usage_alert(max_cost = 5.00)
 
-# Export usage data
-kvk_export_usage("my_usage.csv", format = "monthly")
+# Export session data
+kvk_export_usage("session_usage.csv")
 ```
 
 ### Pricing
-- **Monthly base fee**: EUR 6.20 (if any API calls are made)
-- **Search API**: Free
+- **Monthly base fee**: EUR 6.20 (when you have API access)
+- **Search API**: Free (after base fee)
 - **Profile APIs**: EUR 0.02 per call
 - **Government organizations**: All API calls are free
+- **Access requirement**: Only authorized business representatives can apply
 
 ## More Information
 
